# foxtive-axum

./: Cargo.toml  README.md
foxtive-axum/: CHANGELOG.md  Cargo.toml
foxtive-axum/examples/: basic.rs  byte_extractor.rs  on_shutdown.rs  shutdown_signal.rs
foxtive-axum/src/: error.rs  lib.rs
foxtive-axum/src/contracts/: response_code_contract.rs
foxtive-axum/src/enums/: response_code.rs
foxtive-axum/src/ext/: app_state.rs
foxtive-axum/src/helpers/: json_message.rs  mod.rs  responder.rs
foxtive-axum/src/http/: kernel.rs  mod.rs  responder.rs  static_file.rs
foxtive-axum/src/http/extractors/: byte_body.rs  json_body.rs  mod.rs  string_body.rs
foxtive-axum/src/http/response/: anyhow.rs  ext.rs  message.rs  mod.rs  respond.rs  result.rs  struct.rs  view.rs
foxtive-axum/src/server/: config.rs  mod.rs
foxtive-axum/src/setup/: mod.rs  state.rs
