[workspace]
resolver = "3"
members = [
    "foxtive-axum"
]

[workspace.dependencies]
tracing = "0.1.41"
futures = "0.3.31"
serde = { version = "1.0.225", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
axum = { version = "0.8.4", default-features = false }
foxtive = { version = "0.18.2", default-features = false }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
