[workspace]
resolver = "3"
members = [
    "foxtive-axum"
]

[workspace.dependencies]
tracing = "0.1.44"
futures = "0.3.31"
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
axum = { version = "0.8.8", default-features = false }
foxtive = { version = "0.22.0", default-features = false }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
