[package]
name = "foxtive-axum"
version = "0.1.0"
edition = "2024"

[features]
cors = ["tower-http/cors"]
static = ["tower-http/fs"]
validator = ["dep:validator"]

[dependencies]
thiserror = { workspace = true }
axum = { workspace = true, features = ["tokio", "http1"] }
tokio = { workspace = true, features = ["net", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
foxtive = { workspace = true }
tracing = { workspace = true }

tower = { version = "0.5.2", features = [] }
tower-http = { version = "0.6.6", features = ["trace", "catch-panic", "cors"] }

validator = { version = "0.20.0", features = ["derive"], optional = true }
