[package]
name = "foxtive-axum"
version = "0.3.1"
edition = "2024"
license = "MIT"
description = "Micro-Framework Based on Axum"
repository = "https://github.com/foxtive/foxtive-axum"
authors = ["ahmard"]

[features]
cors = ["tower-http/cors"]
static = ["tower-http/fs"]
validator = ["dep:validator"]

[dependencies]
futures = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true, features = ["tokio", "http1"] }
tokio = { workspace = true, features = ["net", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
foxtive = { workspace = true }
tracing = { workspace = true }

tower = { version = "0.5.2", features = [] }
tower-http = { version = "0.6.6", features = ["trace", "catch-panic", "cors"] }

validator = { version = "0.20.0", features = ["derive"], optional = true }


[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "shutdown-signal"
path = "examples/shutdown_signal.rs"

[[example]]
name = "byte-extractor"
path = "examples/byte_extractor.rs"
