[package]
name = "foxtive-axum"
version = "0.12.1"
edition = "2024"
license = "MIT"
description = "Micro-Framework Based on Axum"
repository = "https://github.com/foxtive/foxtive-axum"
authors = ["ahmard"]

[features]
cors = ["tower-http/cors"]
validator = ["dep:validator"]
templating = ["foxtive/templating"]
static = ["tower-http/fs", "tokio/fs", "dep:mime_guess"]

[dependencies]
futures = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true, features = ["tokio", "http1"] }
tokio = { workspace = true, features = ["net", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
foxtive = { workspace = true }
tracing = { workspace = true }

mime_guess = { version = "2.0.5", optional = true }

tower = { version = "0.5.3", features = [] }
tower-http = { version = "0.6.8", features = ["trace", "catch-panic", "cors"] }

validator = { version = "0.20.0", features = ["derive"], optional = true }


[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = []

[[example]]
name = "shutdown-signal"
path = "examples/shutdown_signal.rs"

[[example]]
name = "byte-extractor"
path = "examples/byte_extractor.rs"
